--- a/QueensEight.Web/QueensEight.Web.csproj
+++ b/QueensEight.Web/QueensEight.Web.csproj
@@ -46,9 +46,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
-    <Reference Include="dotless.Core">
-      <HintPath>..\packages\dotless.1.3.1.0\lib\dotless.Core.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Data.Edm, Version=5.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -183,6 +180,9 @@
     <Content Include="Content\images\glyphicons-halflings.png" />
     <Content Include="Content\images\leather.gif" />
     <Content Include="Content\images\wood.png" />
+    <Content Include="Content\Site.css">
+      <DependentUpon>Site.less</DependentUpon>
+    </Content>
     <Content Include="Global.asax" />
     <None Include="Content\Site.less">
       <Compile>False</Compile>
