--- a/QueensEight.Web/packages.config
+++ b/QueensEight.Web/packages.config
@@ -26,6 +26,7 @@
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="Twitter.Bootstrap.Less" version="2.3.2.1" targetFramework="net45" />
+  <package id="underscore.js" version="1.5.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="2.0.6.1" targetFramework="net45" />
 </packages>
