--- a/QueensEight.Web/packages.config
+++ b/QueensEight.Web/packages.config
@@ -9,6 +9,11 @@
   <package id="Microsoft.AspNet.Providers.Core" version="1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.LocalDB" version="1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net45" />
@@ -20,10 +25,12 @@
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.1.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="Twitter.Bootstrap.Less" version="2.3.2.1" targetFramework="net45" />
   <package id="underscore.js" version="1.5.1" targetFramework="net45" />
