Updated configuration to use Uncommitted configuration file for Azure keys. Pre-Build will touch the file to ensure that it exists so that packaging does not fail.

--- a/QueensEight.Processor/QueensEight.Processor.csproj
+++ b/QueensEight.Processor/QueensEight.Processor.csproj
@@ -40,6 +40,7 @@
       <HintPath>..\packages\Microsoft.WindowsAzure.ConfigurationManager.2.0.1.0\lib\net40\Microsoft.WindowsAzure.Configuration.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -51,7 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
-    <Compile Include="ExcludedConfiguration.cs" />
+    <Compile Include="Configuration.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queen.cs" />
