--- a/Web/.gitignore
+++ b/Web/.gitignore
@@ -2,7 +2,7 @@
 
 #ignore node_modules, as the node project is not "deployed" per se: http://www.mikealrogers.com/posts/nodemodules-in-git.html
 /node_modules
-
+/vendor/components
 /dist
 /generated
 
