Adding Q8 Angular and HTML code. Reconfiguring Lineman to split Vendor and App JS files

--- a/Web/package.json
+++ b/Web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "-web",
-  "title": "An HTML/JS/CSS app",
+  "name": "QueensEight",
+  "title": "Queens Eight",
   "version": "1.0.0",
   "private": true,
   "author": {
