--- a/Web/bower.json
+++ b/Web/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "2.3.2",
     "jquery": "~2.0.3",
     "angular": "1.0.7",
-    "underscore": "1.5.1"
+    "underscore": "1.5.1",
+    "font-awesome": "3.2.1"
   }
 }
