Updated Azure Deployment to include Web\dist. Updated Lineman to install bower

--- a/Web/package.json
+++ b/Web/package.json
@@ -7,7 +7,9 @@
     "company": "Arana Software"
   },
   "devDependencies": {
-    "lineman": "~0.21.3"
+    "lineman": "~0.21.3",
+    "grunt-bower-task": "~0.3.4",
+    "grunt": "~0.4.2"
   },
   "scripts": {
     "start": "lineman run",
