--- a/Web/package.json
+++ b/Web/package.json
@@ -9,7 +9,8 @@
   "devDependencies": {
     "lineman": "~0.21.3",
     "grunt-bower-task": "~0.3.4",
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "less": "~1.6.0"
   },
   "scripts": {
     "start": "lineman run",
