Too aggressive in removing npm dependencies. Added Grunt back in.

--- a/Web/package.json
+++ b/Web/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "lineman": "~0.21.3",
-    "grunt-bower-task": "~0.3.4"
+    "grunt-bower-task": "~0.3.4",
+    "grunt": "~0.4.2"
   },
   "scripts": {
     "start": "lineman run",
