--- a/Web/package.json
+++ b/Web/package.json
@@ -7,11 +7,11 @@
     "company": "Arana Software"
   },
   "devDependencies": {
-    "lineman": "~0.22.0",
+    "lineman": "~0.24.3",
     "grunt": "~0.4.2",
     "lineman-bower": "0.0.3",
-    "lineman-coffeelint": "~0.1.0",
-    "grunt-coffeelint": "~0.0"
+    "lineman-coffeelint": "~0.1.1",
+    "grunt-timer": "~0.3.0"
   },
   "scripts": {
     "start": "lineman run",
