--- a/Web/bower.json
+++ b/Web/bower.json
@@ -15,10 +15,10 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "2.3.2",
+    "bootstrap": "~3.1.0",
     "jquery": "~2.0.3",
     "angular": "1.0.7",
-    "underscore": "1.5.1",
-    "font-awesome": "3.2.1"
+    "underscore": "~1.5.2",
+    "font-awesome": "~4.0.3"
   }
 }
