--- a/Web/package.json
+++ b/Web/package.json
@@ -14,15 +14,27 @@
     "company": "Arana Software"
   },
   "devDependencies": {
-    "lineman": "~0.24.3",
     "grunt": "~0.4.2",
-    "lineman-bower": "~0.0.3",
-    "lineman-coffeelint": "~0.1.1",
+    "grunt-bower-task": "~0.3.4",
+    "grunt-coffeelint": "0.0.8",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.10.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-less": "~0.9.0",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-jade": "~0.9.1",
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-timer": "~0.3.0",
-    "lineman-jade": "~0.1.1"
+    "coffee-script": "~1.7.1",
+    "send": "~0.2.0",
+    "urlrouter": "~0.5.4"
   },
   "scripts": {
-    "start": "lineman run",
-    "test": "lineman spec-ci"
+    "start": "grunt",
+    "test": ""
   }
 }
