--- a/Web/package.json
+++ b/Web/package.json
@@ -14,34 +14,27 @@
     "company": "Arana Software"
   },
   "devDependencies": {
-    "lineman": "~0.24.3",
-    "grunt": "~0.4.2",
-    "lineman-bower": "~0.0.3",
-    "lineman-coffeelint": "~0.1.1",
-    "grunt-timer": "~0.3.0",
-    "lineman-jade": "~0.1.1",
-    "gulp-util": "~2.2.14",
     "gulp": "~3.5.2",
-    "coffee-script": "~1.7.1",
-    "gulp-concat": "~2.1.7",
-    "gulp-coffee": "~1.4.1",
-    "gulp-clean": "~0.2.4",
-    "gulp-uglify": "~0.2.0",
-    "gulp-jshint": "~1.4.0",
-    "gulp-coffeelint": "~0.2.0",
+    "gulp-util": "~2.2.14",
     "gulp-bower": "0.0.2",
-    "gulp-less": "~1.2.1",
-    "gulp-jade": "~0.4.1",
-    "gulp-minify-css": "~0.3.0",
-    "event-stream": "~3.1.0",
-    "gulp-eslint": "~0.1.2",
-    "jshint-stylish": "~0.1.5",
+    "gulp-clean": "~0.2.4",
+    "gulp-coffee": "~1.4.1",
+    "gulp-coffeelint": "~0.2.0",
+    "gulp-concat": "~2.1.7",
     "gulp-connect": "~0.3.1",
-    "urlrouter": "~0.5.4",
-    "send": "~0.2.0"
+    "gulp-jade": "~0.4.1",
+    "gulp-jshint": "~1.4.0",
+    "gulp-less": "~1.2.1",
+    "gulp-minify-css": "~0.3.0",
+    "gulp-uglify": "~0.2.0",
+    "coffee-script": "~1.7.1",
+    "event-stream": "~3.1.0",
+    "jshint-stylish": "~0.1.5",
+    "send": "~0.2.0",
+    "urlrouter": "~0.5.4"
   },
   "scripts": {
-    "start": "lineman run",
-    "test": "lineman spec-ci"
+    "start": "gulp run",
+    "test": ""
   }
 }
