--- a/Web/package.json
+++ b/Web/package.json
@@ -14,28 +14,30 @@
     "company": "Arana Software"
   },
   "devDependencies": {
-    "gulp": "~3.5.2",
-    "gulp-util": "~2.2.14",
-    "gulp-bower": "0.0.2",
-    "gulp-clean": "~0.2.4",
-    "gulp-coffee": "~1.4.1",
-    "gulp-coffeelint": "~0.2.0",
-    "gulp-concat": "~2.1.7",
-    "gulp-connect": "~0.3.1",
-    "gulp-jade": "~0.4.1",
-    "gulp-jshint": "~1.4.0",
-    "gulp-less": "~1.2.1",
-    "gulp-minify-css": "~0.3.0",
-    "gulp-uglify": "~0.2.0",
-    "coffee-script": "~1.7.1",
-    "event-stream": "~3.1.0",
-    "jshint-stylish": "~0.1.5",
-    "send": "~0.2.0",
-    "urlrouter": "~0.5.4",
-    "gulp-plumber": "~0.5.6"
+    "coffee-script": "^1.7.1",
+    "gulp-coffeelint": "^0.3.3",
+    "gulp-connect": "^2.0.5",
+    "gulp-jshint": "^1.6.1",
+    "jshint-stylish": "^0.2.0",
+    "send": "^0.3.0",
+    "urlrouter": "^0.5.4"
   },
   "scripts": {
     "start": "gulp run",
     "test": ""
+  },
+  "dependencies": {
+    "event-stream": "^3.1.5",
+    "gulp": "^3.6.2",
+    "gulp-bower": "0.0.4",
+    "gulp-clean": "^0.2.4",
+    "gulp-coffee": "^1.4.3",
+    "gulp-concat": "^2.2.0",
+    "gulp-jade": "^0.5.0",
+    "gulp-less": "^1.2.3",
+    "gulp-minify-css": "^0.3.4",
+    "gulp-plumber": "^0.6.1",
+    "gulp-uglify": "^0.3.0",
+    "gulp-util": "^2.2.14"
   }
 }
