Updating Gulp configuration. Adding Socket Proxy support. Migrating from Connect to Express

--- a/Web/package.json
+++ b/Web/package.json
@@ -14,13 +14,19 @@
     "company": "Arana Software"
   },
   "devDependencies": {
+    "body-parser": "^1.2.0",
     "coffee-script": "^1.7.1",
+    "compression": "^1.0.2",
+    "errorhandler": "^1.0.1",
+    "express": "^4.2.0",
     "gulp-coffeelint": "^0.3.3",
-    "gulp-connect": "^2.0.5",
     "gulp-jshint": "^1.6.1",
+    "http": "0.0.0",
+    "http-proxy": "^1.1.4",
     "jshint-stylish": "^0.2.0",
-    "send": "^0.3.0",
-    "urlrouter": "^0.5.4"
+    "lodash": "^2.4.1",
+    "open": "0.0.5",
+    "serve-static": "^1.1.0"
   },
   "scripts": {
     "start": "gulp run",
