--- a/Web/package.json
+++ b/Web/package.json
@@ -21,6 +21,7 @@
     "express": "^4.2.0",
     "gulp-coffeelint": "^0.3.3",
     "gulp-jshint": "^1.6.1",
+    "gulp-util": "^2.2.14",
     "http": "0.0.0",
     "http-proxy": "^1.1.4",
     "jshint-stylish": "^0.2.0",
@@ -39,11 +40,14 @@
     "gulp-clean": "^0.2.4",
     "gulp-coffee": "^1.4.3",
     "gulp-concat": "^2.2.0",
+    "gulp-htmlmin": "^0.1.2",
     "gulp-jade": "^0.5.0",
     "gulp-less": "^1.2.3",
+    "gulp-livereload": "^1.5.0",
     "gulp-minify-css": "^0.3.4",
+    "gulp-ng-html2js": "^0.1.6",
+    "gulp-ngmin": "^0.3.0",
     "gulp-plumber": "^0.6.1",
-    "gulp-uglify": "^0.3.0",
-    "gulp-util": "^2.2.14"
+    "gulp-uglify": "^0.3.0"
   }
 }
