--- a/Web/package.json
+++ b/Web/package.json
@@ -41,13 +41,13 @@
     "gulp-coffee": "^1.4.3",
     "gulp-concat": "^2.2.0",
     "gulp-htmlmin": "^0.1.2",
-    "gulp-jade": "^0.5.0",
     "gulp-less": "^1.2.3",
     "gulp-livereload": "^1.5.0",
     "gulp-minify-css": "^0.3.4",
     "gulp-ng-html2js": "^0.1.6",
     "gulp-ngmin": "^0.3.0",
     "gulp-plumber": "^0.6.1",
+    "gulp-template": "^0.1.1",
     "gulp-uglify": "^0.3.0"
   }
 }
