--- a/Web/package.json
+++ b/Web/package.json
@@ -22,11 +22,10 @@
     "gulp-coffeelint": "^0.3.3",
     "gulp-jshint": "^1.6.4",
     "gulp-util": "^2.2.19",
-    "http": "0.0.0",
     "http-proxy": "^1.1.4",
     "jshint-stylish": "^0.2.0",
     "lodash": "^2.4.1",
-    "open": "0.0.5",
+    "open": "^0.0.5",
     "serve-static": "^1.3.0"
   },
   "scripts": {
@@ -36,13 +35,13 @@
   "dependencies": {
     "event-stream": "^3.1.5",
     "gulp": "^3.8.5",
-    "gulp-bower": "0.0.4",
-    "gulp-clean": "^0.2.4",
-    "gulp-coffee": "^1.4.3",
+    "gulp-bower": "0.0.6",
+    "gulp-clean": "^0.3.1",
+    "gulp-coffee": "^2.0.1",
     "gulp-concat": "^2.2.0",
     "gulp-htmlmin": "^0.1.3",
     "gulp-less": "^1.3.1",
-    "gulp-livereload": "^1.5.0",
+    "gulp-livereload": "^2.1.0",
     "gulp-minify-css": "^0.3.6",
     "gulp-ng-html2js": "^0.1.7",
     "gulp-ngmin": "^0.3.0",
