feature(job): pull requested solution from queue

--- a/src/Job/App.config
+++ b/src/Job/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="QueensEight" type="QueensEight.Job.AzureConfiguration, QueensEight.Job, Version=2.0.0.0, Culture=neutral" />
+    <section name="QueensEightWebJob" type="QueensEight.Job.Configuration.WebJobConfiguration, QueensEight.Job, Version=2.0.0.0, Culture=neutral" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
@@ -32,8 +32,7 @@
       </bindingExtensions>
     </extensions>
   </system.serviceModel>
-  <QueensEightStorage configSource="azureStorageSettings.config" />
-  <QueensEightServiceBus configSource="azureServiceBusSettings.config" />
+  <QueensEightWebJob configSource="azureSettings.config" />
   <connectionStrings>
     <add name="AzureWebJobsDashboard" connectionString="" />
     <add name="AzureWebJobsStorage" connectionString="" />
