--- a/src/Job/Job.csproj
+++ b/src/Job/Job.csproj
@@ -98,6 +98,7 @@
     <Compile Include="JobTasks.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Configuration\QueueNameResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
