--- a/src/Web/bower.json
+++ b/src/Web/bower.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "bootstrap": "~3.1.0",
     "jquery": "~2.0.3",
-    "angular": "1.0.7",
+    "angular": "~1.4.8",
+    "angular-resource": "~1.4.0",
     "underscore": "~1.5.2",
     "font-awesome": "~4.0.3"
   }
