--- a/src/Web/bower.json
+++ b/src/Web/bower.json
@@ -20,6 +20,7 @@
     "angular": "~1.4.8",
     "angular-resource": "~1.4.0",
     "underscore": "~1.5.2",
-    "font-awesome": "~4.0.3"
+    "font-awesome": "~4.0.3",
+    "orbweaver-message": "^0.102.1"
   }
 }
