fix(build): reference proper targets for transform

--- a/src/Job/.buildConfiguration/azureSettings.base.config
+++ b/src/Job/.buildConfiguration/azureSettings.base.config
@@ -4,6 +4,6 @@
   serviceBusSasKey="c2FtcGxlS2V5U2V0dGluZw=="
   serviceBusQueueName="requestedSolutions"
   storageAccountName="sampleAccountName"
-  storageAccessKey="c2FtcGxlS2V5U2V0dGluZw==""
+  storageAccessKey="c2FtcGxlS2V5U2V0dGluZw=="
   notificationApiUrl="http://localhost:49657/api/v1/solutions/valid"
 />
